welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  for(i<-1 to 9){
    faireEtage();
  }
}

def faireCoteGauche(c:Color) {
  setCouleurBrosse(c)
  baisseBrosse()
	leveBrosse()
  avance();gauche();avance()
  baisseBrosse();leveBrosse()
  recule();droite();avance()
  baisseBrosse();leveBrosse()	
  recule(2)
}

